--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 #grid {
 height:100vh; 
 padding:0px; 
-background-image:url('src/sport1.jpg'); 
+background-image:url('assets/img/sport1.jpg'); 
 background-size:cover; 
 }
 
