added links in index to html sites

--- a/abintervall.html
+++ b/abintervall.html
@@ -40,7 +40,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>COUNTDOWN</h1>
+      <h1>A/B - Intervall</h1>
 
    <!-- Stopwatch Function   -->
       <div class="stopwatch" id="a-timer"></div>
