--- a/stopwatch.html
+++ b/stopwatch.html
@@ -44,6 +44,9 @@
 
    <!-- Stopwatch Function   -->
       <div class="stopwatch" id="a-timer"></div>
+      <button onclick="startWatch()"> Start</button>
+      <button onclick="stopWatch()"> Stop</button>
+      <button onclick="resetWatch()"> Reset</button>
    <!-- Stopwatch End  -->
   </div>    
     
