--- a/countdown.html
+++ b/countdown.html
@@ -44,6 +44,9 @@
 
    <!-- Stopwatch Function   -->
       <div class="stopwatch" id="a-timer"></div>
+      <button onclick="startWatch()"> Start</button>
+      <button onclick="stopWatch()"> Stop</button>
+      <button onclick="resetWatch()"> Reset</button>
    <!-- Stopwatch End  -->
   </div>    
     
@@ -53,5 +56,5 @@
   
 </html>
 
-<script src="assets/js/stopwatch.js">
+<script src="assets/js/countdown.js">
 </script>
