--- a/abintervall.html
+++ b/abintervall.html
@@ -40,13 +40,29 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>A/B - Intervall</h1>
-
+		<div class="row w-100 h-100 text-center">
+			<div class="col-12 d-flex justify-content-center">
+				<h3>A/B - Intervall</h3>
+</div>
    <!-- Stopwatch Function   -->
-      <div class="stopwatch" id="a-timer"></div>
-      <button onclick="startWatch()"> Start</button>
-      <button onclick="stopWatch()"> Stop</button>
-      <button onclick="resetWatch()"> Reset</button>
+		<div class="col-12 d-flex justify-content-center">
+			<div class="stopwatch" id="a-timer"></div>
+		</div>
+	</div>
+	<div class="row justify-content-center text-center">
+		<div class="col-4 col-sm-3 d-flex justify-content-center">
+			<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
+		</div>
+		<div class="col-4 col-sm-3 d-flex justify-content-center">
+			<button class="btn btn-danger btn-xl" onclick="stopWatch()"><img src="assets/vendor/bootstrap-icons/pause-btn.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Stop</h4></button>
+		</div>
+		<div class="col-4 col-sm-3 d-flex justify-content-center">
+			<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
+		</div>
+		<div class="col-12 col-sm-3 d-flex justify-content-center">
+			<button class="btn btn-secondary btn-xl" onclick="setCountdown(0, 1, 1)"><img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4></button>
+		</div>
+	</div>
    <!-- Stopwatch End  -->
   </div>    
     
