--- a/stopwatch.html
+++ b/stopwatch.html
@@ -40,13 +40,28 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>STOPWATCH</h1>
+	<div class="row w-100 h-75 text-center myrows">
+		<div class="col-12 d-flex justify-content-center">
+			<h3>STOPWATCH</h3>
+		</div>
+
 
    <!-- Stopwatch Function   -->
-      <div class="stopwatch" id="a-timer"></div>
-      <button onclick="startWatch()"> Start</button>
-      <button onclick="stopWatch()"> Stop</button>
-      <button onclick="resetWatch()"> Reset</button>
+		<div class="col-12 d-flex justify-content-center">
+			<div class="stopwatch" id="a-timer"></div>
+		</div>
+	</div>
+	<div class="row justify-content-center text-center">
+		<div class="col-4 d-flex justify-content-center">
+			<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
+		</div>
+		<div class="col-4 d-flex justify-content-center">
+			<button class="btn btn-danger btn-xl" onclick="stopWatch()"><img src="assets/vendor/bootstrap-icons/pause-btn.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Stop</h4></button>
+		</div>
+		<div class="col-4 d-flex justify-content-center">
+			<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
+		</div>
+	</div>
    <!-- Stopwatch End  -->
   </div>    
     
@@ -55,6 +70,7 @@
 
   
 </html>
+<!--- CSS --->
 
 <script src="assets/js/stopwatch.js">
 </script>
