--- a/countdown.html
+++ b/countdown.html
@@ -40,16 +40,21 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-	<div class="row w-100 h-75 text-center">
+	<div class="row w-100 h-75 justify-content-center text-center align-items-center">
 		<div class="col-12 d-flex justify-content-center">
 			<h3>COUNTDOWN</h3>
 		</div>
    <!-- Stopwatch Function   -->
-		<div class="col-12 d-flex justify-content-center">
+		<div class="col-12 col-sm-9 d-flex justify-content-center">
 			<div class="stopwatch" id="a-timer"></div>
 		</div>
+		<div class="col-5 col-sm-3 mycols justify-content-center">
+			<button class="btn btn-warning btn-xl" onclick="setCountdown(0, 1, 1)"><img src="assets/vendor/bootstrap-icons/bootstrap-reboot.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Round</h4></button>
+		</div>
 	</div>
+
 	<div class="row justify-content-center text-center">
+		
 		<div class="col-4 col-sm-3 d-flex justify-content-center">
 			<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
 		</div>
