--- a/emom.html
+++ b/emom.html
@@ -40,7 +40,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-		<div class="row w-100 h-100 text-center">
+		<div class="row w-100 h-100 text-center align-items-center">
 			<div class="col-12 d-flex justify-content-center">
 				<h3>EMOM</h3>
 			</div>
