--- a/stopwatch.html
+++ b/stopwatch.html
@@ -40,7 +40,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-	<div class="row w-100 h-75 text-center myrows">
+	<div class="row w-100 h-75 text-center myrows align-items-center">
 		<div class="col-12 d-flex justify-content-center">
 			<h3>STOPWATCH</h3>
 		</div>
