--- a/abintervall.html
+++ b/abintervall.html
@@ -47,6 +47,7 @@
    <!-- Stopwatch Function   -->
 		<div class="col-12 d-flex justify-content-center">
 			<div class="stopwatch" id="a-timer"></div>
+      Rounds:<p id="a-timer-rounds"></p>
 		</div>
 	</div>
 	<div class="row justify-content-center text-center">
