--- a/emom.html
+++ b/emom.html
@@ -27,27 +27,25 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex header-transparent">
-
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link" href="index.html">Home</a></li>
-       
-    </nav><!-- .navbar -->
-
-  </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
 		<div class="row w-100 h-100 text-center align-items-center">
-			<div class="col-12 d-flex justify-content-center">
+			<div class="col-12 col-sm-1 d-flex justify-content-center">
+				<a href="index.html" class="btn btn-secondary btn-sm" role="button"><img src="assets/vendor/bootstrap-icons/house-door-fill.svg" alt="Bootstrap" width="32" height="32"></img></a>
+			</div>
+			<div class="col-12 col-sm-10 d-flex justify-content-center">
 				<h3>EMOM</h3>
+			</div>
+			<div class="col-sm-1 d-flex justify-content-center">
 			</div>
    <!-- Stopwatch Function   -->
 			<div class="col-12 d-flex justify-content-center">
 				<div class="stopwatch" id="a-timer"></div>
-        Rounds:<p id="a-timer-rounds"></p>
+			</div>
+			<div class="col-12 d-flex justify-content-center abintervall">
+			Rounds:&nbsp;<div id="a-timer-rounds"></div>
 			</div>
 		</div>
 		<div class="row justify-content-center text-center">
