--- a/abintervall.html
+++ b/abintervall.html
@@ -27,46 +27,43 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex header-transparent">
-
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link" href="index.html">Home</a></li>
-       
-    </nav><!-- .navbar -->
-
-  </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-		<div class="row w-100 h-100 text-center align-items-center">
-			<div class="col-12 d-flex justify-content-center">
+		<div class="row w-100 h-75 text-center align-items-center">
+			<div class="col-12 col-sm-1 d-flex justify-content-center">
+				<a href="index.html" class="btn btn-secondary btn-sm" role="button"><img src="assets/vendor/bootstrap-icons/house-door-fill.svg" alt="Bootstrap" width="32" height="32"></img></a>
+			</div>
+			<div class="col-12 col-sm-10 d-flex justify-content-center">
 				<h3>A/B - Intervall</h3>
-</div>
+			</div>
+			<div class="col-sm-1 d-flex justify-content-center">
+			</div>
    <!-- Stopwatch Function   -->
-		<div class="col-12 d-flex justify-content-center">
-			<div class="stopwatch" id="a-timer"></div>
-      Rounds:<p id="a-timer-rounds"></p>
+			<div class="col-12 d-flex justify-content-center">
+				<div class="stopwatch" id="a-timer"></div>
+			</div>
+			<div class="col-12 d-flex justify-content-center abintervall">
+				Rounds:&nbsp;<div id="a-timer-rounds"></div>
+			</div>
 		</div>
-	</div>
-	<div class="row justify-content-center text-center">
-		<div class="col-4 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
+		<div class="row justify-content-center text-center">
+			<div class="col-4 col-sm-3 d-flex justify-content-center">
+				<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
+			</div>
+			<div class="col-4 col-sm-3 d-flex justify-content-center">
+				<button class="btn btn-danger btn-xl" onclick="stopWatch()"><img src="assets/vendor/bootstrap-icons/pause-btn.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Stop</h4></button>
+			</div>
+			<div class="col-4 col-sm-3 d-flex justify-content-center">
+				<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
+			</div>
+			<div class="col-12 col-sm-3 d-flex justify-content-center">
+				<button class="btn btn-secondary btn-xl" onclick="setCountdown(0, 1, 1)"><img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4></button>
+			</div>
 		</div>
-		<div class="col-4 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-danger btn-xl" onclick="stopWatch()"><img src="assets/vendor/bootstrap-icons/pause-btn.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Stop</h4></button>
-		</div>
-		<div class="col-4 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
-		</div>
-		<div class="col-12 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-secondary btn-xl" onclick="setCountdown(0, 1, 1)"><img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4></button>
-		</div>
-	</div>
    <!-- Stopwatch End  -->
-  </div>    
-    
+	</div>    
   </section>
   <!-- End Hero   -->
 
