--- a/countdown.html
+++ b/countdown.html
@@ -27,29 +27,30 @@
 <body>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex header-transparent">
-
-    <nav id="navbar" class="navbar">
-      <ul>
-        <li><a class="nav-link" href="index.html">Home</a></li>
-       
-    </nav><!-- .navbar -->
-
-  </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
 	<div class="row w-100 h-75 justify-content-center text-center align-items-center">
-		<div class="col-12 d-flex justify-content-center">
+		<div class="col-12 col-sm-1 d-flex justify-content-center">
+			<a href="index.html" class="btn btn-secondary btn-sm" role="button"><img src="assets/vendor/bootstrap-icons/house-door-fill.svg" alt="Bootstrap" width="32" height="32"></img></a>
+		</div>
+		<div class="col-12 col-sm-10 d-flex justify-content-center">
 			<h3>COUNTDOWN</h3>
 		</div>
+		<div class="col-sm-1 d-flex justify-content-center">
+		</div>
    <!-- Stopwatch Function   -->
-		<div class="col-12 col-sm-9 d-flex justify-content-center">
+		<div class="col-12 d-flex justify-content-center">
 			<div class="stopwatch" id="a-timer"></div>
 		</div>
-		<div class="col-5 col-sm-3 mycols justify-content-center">
-			<button class="btn btn-warning btn-xl" onclick="setCountdown(0, 1, 1)"><img src="assets/vendor/bootstrap-icons/bootstrap-reboot.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Round</h4></button>
+		<div class="col-1 col-sm-2 d-flex justify-content-center abintervall">
+		</div>
+		<div class="col-9 col-sm-8 d-flex justify-content-center abintervall">
+			Rounds:&nbsp;<output id="output">0</output>
+		</div>
+		<div class="col-2 col-sm-2 justify-content-center text-center align-items-center">
+			<button class="btn btn-warning btn-sm" onclick="buttonClick();"><img src="assets/vendor/bootstrap-icons/bootstrap-reboot.svg" alt="Bootstrap" width="32" height="32"></img></button>
 		</div>
 	</div>
 
@@ -78,4 +79,11 @@
 </html>
 
 <script src="assets/js/countdown.js">
+</script>
+<script>
+    var i = 0;
+    function buttonClick() {
+        i++;
+        document.getElementById('output').value = i;
+    }
 </script>
