--- a/countdown.html
+++ b/countdown.html
@@ -31,59 +31,108 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-	<div class="row w-100 h-75 justify-content-center text-center align-items-center">
-		<div class="col-12 col-sm-1 d-flex justify-content-center">
-			<a href="index.html" class="btn btn-secondary btn-sm" role="button"><img src="assets/vendor/bootstrap-icons/house-door-fill.svg" alt="Bootstrap" width="32" height="32"></img></a>
+		<div class="row w-100 h-75 justify-content-center text-center align-items-center">
+			<div class="col-12 col-sm-1 d-flex justify-content-center">
+				<a href="index.html" class="btn btn-secondary btn-sm" role="button"><img src="assets/vendor/bootstrap-icons/house-door-fill.svg" alt="Bootstrap" width="32" height="32"></img></a>
+			</div>
+			<div class="col-12 col-sm-10 d-flex justify-content-center">
+				<h3>COUNTDOWN</h3>
+			</div>
+			<div class="col-sm-1 d-flex justify-content-center">
+			</div>
+	   <!-- Stopwatch Function   -->
+			<div class="col-12 d-flex justify-content-center">
+				<div class="stopwatch" id="a-timer"></div>
+			</div>
+			<div class="col-1 col-sm-2 d-flex justify-content-center abintervall">
+			</div>
+			<div class="col-9 col-sm-8 d-flex justify-content-center abintervall">
+				Rounds:&nbsp;<output id="output">0</output>
+			</div>
+			<div class="col-2 col-sm-2 justify-content-center text-center align-items-center">
+				<button class="btn btn-warning btn-sm" onclick="buttonClick();"><img src="assets/vendor/bootstrap-icons/bootstrap-reboot.svg" alt="Bootstrap" width="32" height="32"></img></button>
+			</div>
 		</div>
-		<div class="col-12 col-sm-10 d-flex justify-content-center">
-			<h3>COUNTDOWN</h3>
-		</div>
-		<div class="col-sm-1 d-flex justify-content-center">
-		</div>
-   <!-- Stopwatch Function   -->
-		<div class="col-12 d-flex justify-content-center">
-			<div class="stopwatch" id="a-timer"></div>
-		</div>
-		<div class="col-1 col-sm-2 d-flex justify-content-center abintervall">
-		</div>
-		<div class="col-9 col-sm-8 d-flex justify-content-center abintervall">
-			Rounds:&nbsp;<output id="output">0</output>
-		</div>
-		<div class="col-2 col-sm-2 justify-content-center text-center align-items-center">
-			<button class="btn btn-warning btn-sm" onclick="buttonClick();"><img src="assets/vendor/bootstrap-icons/bootstrap-reboot.svg" alt="Bootstrap" width="32" height="32"></img></button>
-		</div>
-	</div>
 
-	<div class="row justify-content-center text-center">
-		
-		<div class="col-4 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
+		<div class="row justify-content-center text-center">
+			
+			<div class="col-4 col-sm-3 d-flex justify-content-center">
+				<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
+			</div>
+			<div class="col-4 col-sm-3 d-flex justify-content-center">
+				<button class="btn btn-danger btn-xl" onclick="stopWatch()"><img src="assets/vendor/bootstrap-icons/pause-btn.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Stop</h4></button>
+			</div>
+			<div class="col-4 col-sm-3 d-flex justify-content-center">
+				<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
+			</div>		
+			<div class="col-12 col-sm-3 d-flex justify-content-center">
+				<div style="width:100%;" id="container"></div>
+			</div>
 		</div>
-		<div class="col-4 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-danger btn-xl" onclick="stopWatch()"><img src="assets/vendor/bootstrap-icons/pause-btn.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Stop</h4></button>
+
+		<!-- Modal -->
+		<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="updateModalLabel">Countdown Settings</h5>
+						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<form>
+							<div class="container-fluid">
+								<div class="row">
+								  <div class="col-4">hours</div>
+								  <div class="col-8 ms-auto"><input id="hours" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								</div>
+								<div class="row">
+								  <div class="col-4">minutes</div>
+								  <div class="col-8 ms-auto"><input id="minutes" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								</div>
+								<div class="row">
+								  <div class="col-4">seconds</div>
+								  <div class="col-8 ms-auto"><input id="seconds" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary">Save changes</button>
+					</div>
+				</div>
+			</div>
 		</div>
-		<div class="col-4 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
-		</div>
-		<div class="col-12 col-sm-3 d-flex justify-content-center">
-			<button class="btn btn-secondary btn-xl" onclick="setCountdown(0, 1, 1)"><img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4></button>
-		</div>
-	</div>
-   <!-- Stopwatch End  -->
-  </div>    
-    
+	</div>   
   </section>
-  <!-- End Hero   -->
-
-  
+</body>  
 </html>
 
-<script src="assets/js/countdown.js">
-</script>
+<!-- Bootstrap   -->
+<script src="assets/js/countdown.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Counter   -->
 <script>
     var i = 0;
     function buttonClick() {
         i++;
         document.getElementById('output').value = i;
     }
+</script>
+
+<!-- Modal  -->
+<script>
+	const btn_update = document.createElement("button");
+
+	btn_update.innerHTML = '<img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4>'
+	btn_update.classList = 'btn btn-secondary btn-xl'
+	btn_update.setAttribute('data-bs-target','#updateModal')
+	btn_update.setAttribute('data-bs-toggle','modal')
+
+	document.getElementById('container').appendChild(btn_update);
 </script>
