--- a/emom.html
+++ b/emom.html
@@ -59,15 +59,57 @@
 				<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
 			</div>
 			<div class="col-12 col-sm-3 d-flex justify-content-center">
-				<button class="btn btn-secondary btn-xl" onclick="setCountdown(0, 1, 1)"><img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4></button>
+				<div style="width:100%;" id="container"></div>
 			</div>
 		</div>
-   <!-- Stopwatch End  -->
-	</div>   
     
+		<!-- Modal -->
+		<div class="modal fade" id="updateModal" tabindex="-1" role="dialog" aria-labelledby="updateModalLabel" aria-hidden="true">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title" id="updateModalLabel">EMOM Settings</h5>
+						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+							<span aria-hidden="true">&times;</span>
+						</button>
+					</div>
+					<div class="modal-body">
+						<form>
+							<div class="container-fluid">
+								<div class="row">
+								  <div class="col-4">rounds</div>
+								  <div class="col-8 ms-auto"><input id="emom-rounds" type="text" maxlength="4" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						<button type="button" class="btn btn-primary">Save changes</button>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>   
   </section>
-  <!-- End Hero   -->
+</body>  
 </html>
 
-<script src="assets/js/emom.js">
+<script src="assets/js/emom.js"></script>
+
+<!-- Bootstrap   -->
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.js"></script>
+<script src="assets/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+<!-- Modal  -->
+<script>
+	const btn_update = document.createElement("button");
+
+	btn_update.innerHTML = '<img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4>'
+	btn_update.classList = 'btn btn-secondary btn-xl'
+	btn_update.setAttribute('data-bs-target','#updateModal')
+	btn_update.setAttribute('data-bs-toggle','modal')
+
+	document.getElementById('container').appendChild(btn_update);
 </script>
