--- a/abintervall.html
+++ b/abintervall.html
@@ -48,7 +48,7 @@
 				Rounds:&nbsp;<div id="a-timer-rounds"></div>
 			</div>
 		</div>
-		<div class="row justify-content-center text-center">
+		<div class="row d-flex justify-content-center text-center text-center align-items-center">
 			<div class="col-4 col-sm-3 d-flex justify-content-center">
 				<button class="btn btn-success btn-xl" onclick="startWatch()"><img src="assets/vendor/bootstrap-icons/file-play.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Start</h4></button>
 			</div>
@@ -59,7 +59,11 @@
 				<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
 			</div>
 			<div class="col-12 col-sm-3 d-flex justify-content-center">
-				<div style="width:100%;" id="container"></div>
+				<div class="row">
+					<div class="col-12 d-flex text-center text-center align-items-center">
+						<div style="width:100%;" id="container"></div>
+					</div>
+				</div>
 			</div>
 		</div>
    <!-- Stopwatch End  -->
@@ -82,15 +86,16 @@
 								<br>
 								<div class="row">
 								  <div class="col-4">hours</div>
-								  <div class="col-8 ms-auto"><input id="a-intervall-hours" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								  <div class="col-8"><input id="a-intervall-hours" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+	
 								</div>
 								<div class="row">
 								  <div class="col-4">minutes</div>
-								  <div class="col-8 ms-auto"><input id="a-intervall-minutes" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								  <div class="col-8"><input id="a-intervall-minutes" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 								</div>
 								<div class="row">
 								  <div class="col-4">seconds</div>
-								  <div class="col-8 ms-auto"><input id="a-intervall-seconds" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								  <div class="col-8"><input id="a-intervall-seconds" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 								</div>
 								<br>
 								<br>
@@ -100,15 +105,15 @@
 								<br>
 								<div class="row">
 								  <div class="col-4">hours</div>
-								  <div class="col-8 ms-auto"><input id="b-intervall-hours" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								  <div class="col-8"><input id="b-intervall-hours" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 								</div>
 								<div class="row">
 								  <div class="col-4">minutes</div>
-								  <div class="col-8 ms-auto"><input id="b-intervall-minutes" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								  <div class="col-8"><input id="b-intervall-minutes" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 								</div>
 								<div class="row">
 								  <div class="col-4">seconds</div>
-								  <div class="col-8 ms-auto"><input id="b-intervall-seconds" type="text" maxlength="2" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								  <div class="col-8"><input id="b-intervall-seconds" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 								</div>
 								<br>
 								<br>
@@ -117,7 +122,7 @@
 								</div>
 								<div class="row">
 								  <div class="col-4">rounds</div>
-								  <div class="col-8 ms-auto"><input id="rounds" type="text" maxlength="4" placeholder="00" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+								  <div class="col-8"><input id="rounds" type="text" maxlength="4" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 								</div>
 						</form>
 					</div>
@@ -145,7 +150,7 @@
 <script>
 	const btn_update = document.createElement("button");
 
-	btn_update.innerHTML = '<img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Change Settings</h4>'
+	btn_update.innerHTML = '<img src="assets/vendor/bootstrap-icons/sliders.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Settings</h4>'
 	btn_update.classList = 'btn btn-secondary btn-xl'
 	btn_update.setAttribute('data-bs-target','#updateModal')
 	btn_update.setAttribute('data-bs-toggle','modal')
