--- a/emom.html
+++ b/emom.html
@@ -81,9 +81,33 @@
 						<form>
 							<div class="container-fluid">
 								<div class="row">
-								  <div class="col-4">rounds</div>
-								  <div class="col-8 ms-auto"><input id="emom-rounds" type="text" maxlength="4" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									<div class="col"><b>Time</b></div>
+									</div>
+									<br>
+									<div class="row">
+									  <div class="col-4">hours</div>
+									  <div class="col-8"><input id="emom-hours" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									</div>
+									<div class="row">
+									  <div class="col-4">minutes</div>
+									  <div class="col-8"><input id="emom-minutes" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									</div>
+									<div class="row">
+									  <div class="col-4">seconds</div>
+									  <div class="col-8"><input id="emom-seconds" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									</div>
+									<br>
+									<br>
+									<div class="row">
+										<div class="col"><b>Rounds</b></div>
+									</div>
+									<br>
+									<div class="row">
+									  <div class="col-4">rounds</div>
+									  <div class="col-8"><input id="rounds" type="text" maxlength="4" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									</div>
 								</div>
+							</div>
 						</form>
 					</div>
 					<div class="modal-footer">
