--- a/stopwatch.html
+++ b/stopwatch.html
@@ -44,6 +44,14 @@
 		<div class="col-12 d-flex justify-content-center">
 			<div class="stopwatch" id="a-timer"></div>
 		</div>
+		<div class="col-1 col-sm-2 d-flex justify-content-center abintervall">
+		</div>
+		<div class="col-9 col-sm-8 d-flex justify-content-center abintervall">
+			Rounds:&nbsp;<output id="output">0</output>
+		</div>
+		<div class="col-2 col-sm-2 justify-content-center text-center align-items-center">
+			<button class="btn btn-warning btn-sm" onclick="buttonClick();"><img src="assets/vendor/bootstrap-icons/bootstrap-reboot.svg" alt="Bootstrap" width="32" height="32"></img></button>
+		</div>
 	</div>
 	<div class="row justify-content-center text-center">
 		<div class="col-4 d-flex justify-content-center">
@@ -67,4 +75,13 @@
 <!--- CSS --->
 
 <script src="assets/js/stopwatch.js">
+</script>
+
+<!-- Counter   -->
+<script>
+    var i = 0;
+    function buttonClick() {
+        i++;
+        document.getElementById('output').value = i;
+    }
 </script>
