--- a/countdown.html
+++ b/countdown.html
@@ -63,7 +63,7 @@
 				<button class="btn btn-danger btn-xl" onclick="stopWatch()"><img src="assets/vendor/bootstrap-icons/pause-btn.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Stop</h4></button>
 			</div>
 			<div class="col-4 col-sm-3 d-flex justify-content-center">
-				<button class="btn btn-light btn-xl" onclick="resetWatch()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
+				<button class="btn btn-light btn-xl" onclick="resetWatch();resetCounter()"><img src="assets/vendor/bootstrap-icons/arrow-counterclockwise.svg" alt="Bootstrap" width="32" height="32"></img><br><h4>Reset</h4></button>
 			</div>		
 			<div class="col-12 col-sm-3 d-flex justify-content-center">
 				<div class="row">
@@ -103,7 +103,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary">Save changes</button>
+						<button type="button" class="btn btn-primary" onclick="setTime()">Save changes</button>
 					</div>
 				</div>
 			</div>
@@ -127,6 +127,10 @@
         i++;
         document.getElementById('output').value = i;
     }
+	function resetCounter() {
+		i = 0;
+		document.getElementById('output').value = i;
+	}
 </script>
 
 <!-- Modal  -->
