--- a/emom.html
+++ b/emom.html
@@ -72,7 +72,7 @@
 			<div class="modal-dialog" role="document">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="updateModalLabel">EMOM Settings</h5>
+						<h5 class="modal-title" id="updateModalLabel">Countdown Settings</h5>
 						<button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
 							<span aria-hidden="true">&times;</span>
 						</button>
@@ -82,19 +82,18 @@
 							<div class="container-fluid">
 								<div class="row">
 									<div class="col"><b>Time</b></div>
-									</div>
 									<br>
 									<div class="row">
 									  <div class="col-4">hours</div>
-									  <div class="col-8"><input id="emom-hours" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									  <div class="col-8"><input id="hours" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 									</div>
 									<div class="row">
 									  <div class="col-4">minutes</div>
-									  <div class="col-8"><input id="emom-minutes" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									  <div class="col-8"><input id="minutes" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 									</div>
 									<div class="row">
 									  <div class="col-4">seconds</div>
-									  <div class="col-8"><input id="emom-seconds" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
+									  <div class="col-8"><input id="seconds" type="text" maxlength="2" placeholder="00" size="10" oninput="this.value=this.value.replace(/[^0-9]/g,'');" /></div>
 									</div>
 									<br>
 									<br>
