--- a/countdown.html
+++ b/countdown.html
@@ -103,7 +103,7 @@
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-						<button type="button" class="btn btn-primary" onclick="setTime()">Save changes</button>
+						<button type="button" class="btn btn-primary" onclick="setTime()" data-bs-dismiss="modal">Save changes</button>
 					</div>
 				</div>
 			</div>
