--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
     <title>Timer APP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	
+	<!--  Main CSS File -->
+	 <link href="assets/css/style_bg.css" rel="stylesheet">
   </head>
 
 <!-- BODY -->
@@ -57,9 +60,7 @@
     
 #grid {
 height:100vh; 
-padding:0px; 
-background-image:url('assets/img/sport1.jpg'); 
-background-size:cover; 
+padding:0px;  
 }
 
 body {
